# napari-interactive-segm

./: LICENSE  README.md  setup.cfg  setup.py  tox.ini
napari_interactive_segm/: _dock_widget.py  main.py
napari_interactive_segm/_tests/: test_dock_widget.py
